--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Tutoring Website</title>
+    <title>VirtuMentor</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
     </section>
     <section id="demo-class">
         <h2>Free Demo Class</h2>
-        <p>Join a free demo class to see if we’re a fit!</p>
+        <p>Join a free demo class to see if weâ€™re a fit!</p>
     </section>
     <section id="contact">
         <h2>Contact Me</h2>
