--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VirtuMentor</title>
+    <title>My Tutoring Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,12 +25,15 @@
     </section>
     <section id="contact">
         <h2>Contact Me</h2>
-        <form action="https://formspree.io/f/{your-form-id}" method="POST">
+        <form action="https://formspree.io/f/movqjpgy" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
+
+            <label for="phoneNo">Phone No:</label>
+            <input type="text" id="phone" name="phone" required>
 
             <label for="message">Message:</label>
             <textarea id="message" name="message" required></textarea>
